# async-graphql-diesel-template

./: .env  Cargo.toml  README.md
migrations/2024-02-22-130922_initial/: down.sql  up.sql
src/: connection.rs  database.rs  lib.rs  main.rs  schema.rs
src/graphql/: author.rs  book.rs  error.rs  mod.rs  mutation.rs  query.rs  schema.rs
